made changes for absolute path handling

--- a/src/goose_config.json
+++ b/src/goose_config.json
@@ -1,1 +1,1 @@
-{"test": "test.bat"}
+{"test": "C:\\Users\\khare\\Desktop\\New-folder\\goose\\src\\test.bat", "dsk": "C:\\Users\\khare\\Desktop\\New-folder\\goose\\src\\test.bat"}
